--- a/Crypto_Clustering_starter_code.ipynb
+++ b/Crypto_Clustering_starter_code.ipynb
@@ -411,15 +411,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use the `StandardScaler()` module from scikit-learn to normalize the data from the CSV file\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -558,8 +549,231 @@
     }
    ],
    "source": [
-    "# Create a DataFrame with the scaled data\n",
+    "# Use the `StandardScaler()` module from scikit-learn to normalize the data from the CSV file\n",
+    "scaler= StandardScaler()\n",
+    "# Fit the StandardScaler to the data\n",
+    "scaled_data =scaler.fit_transform(market_data_df)\n",
+    "# Transform the data\n",
     "\n",
+    "# Convert the scaled data to a DataFrame\n",
+    "scaled_data_df = pd.DataFrame(scaled_data, columns=market_data_df.columns, index=market_data_df.index)\n",
+    "\n",
+    "# Display the first 5 rows of the scaled data\n",
+    "scaled_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price_change_percentage_24h</th>\n",
+       "      <th>price_change_percentage_7d</th>\n",
+       "      <th>price_change_percentage_14d</th>\n",
+       "      <th>price_change_percentage_30d</th>\n",
+       "      <th>price_change_percentage_60d</th>\n",
+       "      <th>price_change_percentage_200d</th>\n",
+       "      <th>price_change_percentage_1y</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>coin_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bitcoin</th>\n",
+       "      <td>0.508529</td>\n",
+       "      <td>0.493193</td>\n",
+       "      <td>0.772200</td>\n",
+       "      <td>0.235460</td>\n",
+       "      <td>-0.067495</td>\n",
+       "      <td>-0.355953</td>\n",
+       "      <td>-0.251637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ethereum</th>\n",
+       "      <td>0.185446</td>\n",
+       "      <td>0.934445</td>\n",
+       "      <td>0.558692</td>\n",
+       "      <td>-0.054341</td>\n",
+       "      <td>-0.273483</td>\n",
+       "      <td>-0.115759</td>\n",
+       "      <td>-0.199352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tether</th>\n",
+       "      <td>0.021774</td>\n",
+       "      <td>-0.706337</td>\n",
+       "      <td>-0.021680</td>\n",
+       "      <td>-0.061030</td>\n",
+       "      <td>0.008005</td>\n",
+       "      <td>-0.550247</td>\n",
+       "      <td>-0.282061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ripple</th>\n",
+       "      <td>-0.040764</td>\n",
+       "      <td>-0.810928</td>\n",
+       "      <td>0.249458</td>\n",
+       "      <td>-0.050388</td>\n",
+       "      <td>-0.373164</td>\n",
+       "      <td>-0.458259</td>\n",
+       "      <td>-0.295546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bitcoin-cash</th>\n",
+       "      <td>1.193036</td>\n",
+       "      <td>2.000959</td>\n",
+       "      <td>1.760610</td>\n",
+       "      <td>0.545842</td>\n",
+       "      <td>-0.291203</td>\n",
+       "      <td>-0.499848</td>\n",
+       "      <td>-0.270317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>binancecoin</th>\n",
+       "      <td>0.891871</td>\n",
+       "      <td>1.327295</td>\n",
+       "      <td>0.800214</td>\n",
+       "      <td>-0.057148</td>\n",
+       "      <td>0.778653</td>\n",
+       "      <td>-0.188232</td>\n",
+       "      <td>-0.225533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>chainlink</th>\n",
+       "      <td>0.011397</td>\n",
+       "      <td>2.572251</td>\n",
+       "      <td>1.101647</td>\n",
+       "      <td>-0.490495</td>\n",
+       "      <td>-0.931954</td>\n",
+       "      <td>0.387759</td>\n",
+       "      <td>-0.018284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cardano</th>\n",
+       "      <td>0.102530</td>\n",
+       "      <td>1.508001</td>\n",
+       "      <td>0.648885</td>\n",
+       "      <td>0.328959</td>\n",
+       "      <td>-0.486349</td>\n",
+       "      <td>0.065080</td>\n",
+       "      <td>-0.155428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>litecoin</th>\n",
+       "      <td>0.077497</td>\n",
+       "      <td>0.334297</td>\n",
+       "      <td>0.858520</td>\n",
+       "      <td>-0.012646</td>\n",
+       "      <td>-0.366477</td>\n",
+       "      <td>-0.486266</td>\n",
+       "      <td>-0.292351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>bitcoin-cash-sv</th>\n",
+       "      <td>0.448952</td>\n",
+       "      <td>-0.190684</td>\n",
+       "      <td>-0.248043</td>\n",
+       "      <td>0.051634</td>\n",
+       "      <td>-0.529666</td>\n",
+       "      <td>-0.532961</td>\n",
+       "      <td>-0.206029</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 price_change_percentage_24h  price_change_percentage_7d  \\\n",
+       "coin_id                                                                    \n",
+       "bitcoin                             0.508529                    0.493193   \n",
+       "ethereum                            0.185446                    0.934445   \n",
+       "tether                              0.021774                   -0.706337   \n",
+       "ripple                             -0.040764                   -0.810928   \n",
+       "bitcoin-cash                        1.193036                    2.000959   \n",
+       "binancecoin                         0.891871                    1.327295   \n",
+       "chainlink                           0.011397                    2.572251   \n",
+       "cardano                             0.102530                    1.508001   \n",
+       "litecoin                            0.077497                    0.334297   \n",
+       "bitcoin-cash-sv                     0.448952                   -0.190684   \n",
+       "\n",
+       "                 price_change_percentage_14d  price_change_percentage_30d  \\\n",
+       "coin_id                                                                     \n",
+       "bitcoin                             0.772200                     0.235460   \n",
+       "ethereum                            0.558692                    -0.054341   \n",
+       "tether                             -0.021680                    -0.061030   \n",
+       "ripple                              0.249458                    -0.050388   \n",
+       "bitcoin-cash                        1.760610                     0.545842   \n",
+       "binancecoin                         0.800214                    -0.057148   \n",
+       "chainlink                           1.101647                    -0.490495   \n",
+       "cardano                             0.648885                     0.328959   \n",
+       "litecoin                            0.858520                    -0.012646   \n",
+       "bitcoin-cash-sv                    -0.248043                     0.051634   \n",
+       "\n",
+       "                 price_change_percentage_60d  price_change_percentage_200d  \\\n",
+       "coin_id                                                                      \n",
+       "bitcoin                            -0.067495                     -0.355953   \n",
+       "ethereum                           -0.273483                     -0.115759   \n",
+       "tether                              0.008005                     -0.550247   \n",
+       "ripple                             -0.373164                     -0.458259   \n",
+       "bitcoin-cash                       -0.291203                     -0.499848   \n",
+       "binancecoin                         0.778653                     -0.188232   \n",
+       "chainlink                          -0.931954                      0.387759   \n",
+       "cardano                            -0.486349                      0.065080   \n",
+       "litecoin                           -0.366477                     -0.486266   \n",
+       "bitcoin-cash-sv                    -0.529666                     -0.532961   \n",
+       "\n",
+       "                 price_change_percentage_1y  \n",
+       "coin_id                                      \n",
+       "bitcoin                           -0.251637  \n",
+       "ethereum                          -0.199352  \n",
+       "tether                            -0.282061  \n",
+       "ripple                            -0.295546  \n",
+       "bitcoin-cash                      -0.270317  \n",
+       "binancecoin                       -0.225533  \n",
+       "chainlink                         -0.018284  \n",
+       "cardano                           -0.155428  \n",
+       "litecoin                          -0.292351  \n",
+       "bitcoin-cash-sv                   -0.206029  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a DataFrame with the scaled data\n",
+    "scaled_data_df = pd.DataFrame(scaled_data, columns=market_data_df.columns, index=market_data_df.index)\n",
     "\n",
     "# Copy the crypto names from the original data\n",
     "\n",
@@ -567,7 +781,8 @@
     "# Set the coinid column as index\n",
     "\n",
     "\n",
-    "# Display sample data\n"
+    "# Display sample data\n",
+    "scaled_data_df.head(10)"
    ]
   },
   {
@@ -579,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -616,47 +831,47 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>212.123342</td>\n",
+       "      <td>198.571818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>145.897940</td>\n",
+       "      <td>145.635748</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>131.457370</td>\n",
+       "      <td>79.022435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>66.317106</td>\n",
+       "      <td>66.217780</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>6</td>\n",
-       "      <td>57.402668</td>\n",
+       "      <td>59.139070</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>7</td>\n",
-       "      <td>49.212644</td>\n",
+       "      <td>48.406314</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>8</td>\n",
-       "      <td>44.799804</td>\n",
+       "      <td>38.993588</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>9</td>\n",
-       "      <td>33.859468</td>\n",
+       "      <td>34.400595</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>10</td>\n",
-       "      <td>29.250314</td>\n",
+       "      <td>28.573603</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -665,18 +880,18 @@
       "text/plain": [
        "    k     inertia\n",
        "0   1  287.000000\n",
-       "1   2  212.123342\n",
-       "2   3  145.897940\n",
-       "3   4  131.457370\n",
-       "4   5   66.317106\n",
-       "5   6   57.402668\n",
-       "6   7   49.212644\n",
-       "7   8   44.799804\n",
-       "8   9   33.859468\n",
-       "9  10   29.250314"
+       "1   2  198.571818\n",
+       "2   3  145.635748\n",
+       "3   4   79.022435\n",
+       "4   5   66.217780\n",
+       "5   6   59.139070\n",
+       "6   7   48.406314\n",
+       "7   8   38.993588\n",
+       "8   9   34.400595\n",
+       "9  10   28.573603"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,25 +899,29 @@
    "source": [
     "# Create a list with the number of k-values to try\n",
     "# Use a range from 1 to 11\n",
-    "\n",
+    "k= range(1, 11)\n",
     "\n",
     "# Create an empty list to store the inertia values\n",
-    "\n",
+    "inertia = []\n",
     "\n",
     "# Create a for loop to compute the inertia with each possible value of k\n",
     "# Inside the loop:\n",
     "# 1. Create a KMeans model using the loop counter for the n_clusters\n",
     "# 2. Fit the model to the data using the scaled DataFrame\n",
     "# 3. Append the model.inertia_ to the inertia list\n",
-    "\n",
+    "for i in k:\n",
+    "    model = KMeans(n_clusters=i, random_state=0)\n",
+    "    model.fit(scaled_data_df)\n",
+    "    inertia.append(model.inertia_)\n",
     "\n",
     "# Create a dictionary with the data to plot the Elbow curve\n",
-    "\n",
+    "elbow_data = {\"k\": k, \"inertia\": inertia}\n",
     "\n",
     "# Create a DataFrame with the data to plot the Elbow curve\n",
+    "df_elbow = pd.DataFrame(elbow_data)\n",
     "\n",
-    "\n",
-    "# Display the DataFrame\n"
+    "# Display the DataFrame\n",
+    "df_elbow"
    ]
   },
   {
@@ -1516,7 +1735,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1530,15 +1749,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   },
   "nteract": {
    "version": "0.28.0"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
-   }
   }
  },
  "nbformat": 4,
